Code review
Signed-off-by: clinique <gael@lhopital.org>